--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -584,10 +584,10 @@
     overflow: scroll;
 }
 
-.board::-webkit-scrollbar, .lanes::-webkit-scrollbar {
+.board::-webkit-scrollbar,
+.lanes::-webkit-scrollbar {
     display: none;
 }
-
 
 /* ---- BOARD ---- */
 .lanes {
@@ -646,7 +646,7 @@
 .active-card:hover > .card {
     border-radius: 20px;
     border: 1px solid black;
-    transition-duration: .20s;
+    transition-duration: 0.2s;
     transition-property: border-radius;
 }
 
@@ -693,59 +693,59 @@
     color: #012970;
 }
 
-.trash-can-container{
+.trash-can-container {
     display: inline-block;
     width: 200px;
 }
 
 .trash {
-	background:#ff6873;
-	width: 18px;
-	height: 20px;
-	display: inline-block;
-	margin:0 auto;
-	
-	position: relative;
-	-webkit-border-bottom-right-radius: 6px;
-	-webkit-border-bottom-left-radius: 6px;
-	-moz-border-radius-bottomright: 6px;
-	-moz-border-radius-bottomleft: 6px;
-	border-bottom-right-radius: 6px;
-	border-bottom-left-radius: 6px;
+    background: #ff6873;
+    width: 18px;
+    height: 20px;
+    display: inline-block;
+    margin: 0 auto;
+
+    position: relative;
+    -webkit-border-bottom-right-radius: 6px;
+    -webkit-border-bottom-left-radius: 6px;
+    -moz-border-radius-bottomright: 6px;
+    -moz-border-radius-bottomleft: 6px;
+    border-bottom-right-radius: 6px;
+    border-bottom-left-radius: 6px;
 }
 
 .trash span {
-	position: absolute;
-	height: 5px;
-	background: #ff6873;
-	top: -6px;
-	width: 28px;
+    position: absolute;
+    height: 5px;
+    background: #ff6873;
+    top: -6px;
+    width: 28px;
     left: -5px;
-	
-	border-top-left-radius: 10px;
-	border-top-right-radius: 10px;
-	transform: rotate(0deg);
-	transition: transform 100ms;
-	transform-origin: 19% 100%;
+
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    transform: rotate(0deg);
+    transition: transform 100ms;
+    transform-origin: 19% 100%;
 }
 .trash span:after {
-	content: '';
-	position: absolute;
-	width: 8px;
-	height: 3px;
-	background: #ff6873;
-	top: -4px;
+    content: "";
+    position: absolute;
+    width: 8px;
+    height: 3px;
+    background: #ff6873;
+    top: -4px;
     left: 10px;
-	border-top-left-radius: 10px;
-	border-top-right-radius: 10px;
-	transform: rotate(0deg);
-	transition: transform 100ms;
-	transform-origin: 19% 100%;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    transform: rotate(0deg);
+    transition: transform 100ms;
+    transform-origin: 19% 100%;
 }
 
 .trash:hover span {
-	top: -10px;
-	transition: all 100ms;
+    top: -10px;
+    transition: all 100ms;
 }
 
 .drag-over.trash span {
@@ -755,43 +755,41 @@
 
 /* Breadcrumbs */
 .breadcrumb {
-  font-size: 14px;
-  font-family: "Nunito", sans-serif;
-  color: #899bbd;
-  font-weight: 600;
+    font-size: 14px;
+    font-family: "Nunito", sans-serif;
+    color: #899bbd;
+    font-weight: 600;
 }
 
 .breadcrumb a {
-  color: #899bbd;
-  transition: 0.3s;
-  text-decoration: none;
+    color: #899bbd;
+    transition: 0.3s;
+    text-decoration: none;
 }
 
 .breadcrumb a:hover {
-  color: #51678f;
+    color: #51678f;
 }
 
 .breadcrumb .breadcrumb-item::before {
-  color: #899bbd;
+    color: #899bbd;
 }
 
 .breadcrumb .active {
-  color: #51678f;
-  font-weight: 600;
+    color: #51678f;
+    font-weight: 600;
 }
-
-
 
 /* Task Add */
 .col-form-label {
     color: #01041b;
 }
 
-.border-task{
+.border-task {
     height: 50px;
     line-height: 50px;
-    background: #F8F7F7;
-    border: 1px solid #E0E2DB;
+    background: #f8f7f7;
+    border: 1px solid #e0e2db;
     font-size: 14px;
     -webkit-border-radius: 16px;
     -moz-border-radius: 16px;
@@ -801,7 +799,7 @@
     box-shadow: none;
 }
 
-.task-content{
+.task-content {
     position: relative;
     display: flex;
     flex-direction: column;
@@ -815,8 +813,8 @@
     outline: 0;
 }
 
-.border-task-description{
-    background-color: #F8F7F7;
+.border-task-description {
+    background-color: #f8f7f7;
     line-height: 28px;
 }
 
@@ -839,7 +837,6 @@
     border-radius: 5px;
     font-size: 11.375px;
     margin: 5px 0;
-    
 }
 
 .code-block p {
@@ -855,18 +852,19 @@
 .custom-color {
     background-color: #70f8fa;
     border: 2px solid #81e6d9;
-    font-size: .8em;
+    font-size: 0.8em;
     padding: 0 10px !important;
 }
 
 .mult-select-tag {
     display: flex;
-    width:100%;
+    width: 100%;
     flex-direction: column;
     align-items: center;
     position: relative;
     --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
-    --tw-shadow-color: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
+    --tw-shadow-color: 0 1px 3px 0 var(--tw-shadow-color),
+        0 1px 2px -1px var(--tw-shadow-color);
     --border-color: rgb(218, 221, 224);
     font-family: Verdana, sans-serif;
 }
@@ -880,9 +878,8 @@
     border: 1px solid var(--border-color);
     background: white;
     min-height: 2.15rem;
-    width:100%;
+    width: 100%;
     min-width: 14rem;
-
 }
 
 .mult-select-tag .input-container {
@@ -898,7 +895,7 @@
 }
 
 .mult-select-tag .input {
-    flex:1;
+    flex: 1;
     background: transparent;
     border-radius: 0.25rem;
     padding: 0.45rem;
@@ -909,7 +906,7 @@
 }
 
 .mult-select-tag .btn-container {
-    color: #e2eBf0;
+    color: #e2ebf0;
     padding: 0.5rem;
     display: flex;
     border-left: 1px solid var(--border-color);
@@ -934,7 +931,6 @@
     width: 1rem;
     height: 90%;
 }
-
 
 .mult-select-tag .drawer {
     position: absolute;
@@ -1005,10 +1001,42 @@
     display: none;
 }
 
-.mult-select-tag .shadow  {
-    box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+.mult-select-tag .shadow {
+    box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000),
+        var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
 .mult-select-tag .rounded {
-    border-radius: .375rem;
+    border-radius: 0.375rem;
+}
+
+.number > span {
+    cursor: pointer;
+}
+
+.number {
+    display: flex;
+    gap: 1px;
+    justify-content: center;
+    align-items: center;
+}
+
+.number > input {
+    width: 33px;
+    font-size: .8rem;
+    height: 20px;
+}
+
+.number > input {
+    text-align: center;
+}
+
+.minus, .plus {
+    width: 20px;
+    height: 20px;
+    border: 1px solid rgb(167, 167, 167);
+    border-radius: 5px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
