--- a/src/main/resources/templates/projects.html
+++ b/src/main/resources/templates/projects.html
@@ -201,7 +201,7 @@
             </div>
             <div class="modal-body">
 
-                <form class="row g-3" id="validation-form" action="">
+                <form class="row g-3" id="validation-form" action="/project" method="GET">
                     <div class="col-lg-6">
                         <label for="name" class="col-sm-12 col-form-label" name="name">Project Name<span
                                 style="color:red"> *</span></label>
@@ -780,6 +780,53 @@
     </div>
 </div>
 <!-- modal for project's details -->
+
+
+<script>
+
+    let form=$('#validation-form');
+
+    function validateForm(){
+        let name=$('#name').val();
+        let department=$('#department').val();
+        let user=$('#user').val();
+        let member=$('#member').val();
+        let client=$('#client').val();
+        let background=$('#background').val();
+        let start_date=$('#start_date').val();
+        let duration=$('#duration').val();
+        let objective=$('#objective').val();
+        let architectures=$('#architectures').val();
+        let systemOutlines=$('#systemOutlines').val();
+        let deliverable=$('#deliverable').val();
+
+        if(name=="" || department=="" || user=="" || member=="" || client=="" || background=="" || start_date=="" || duration=="" || objective=="" || architectures=="" || systemOutlines=="" || deliverable==""){
+            alert("Please fill all the fields");
+            return false;
+        }
+        else{
+            return true;
+        }
+    }
+
+    form.submit(function (e){
+        e.preventDefault();
+        if(validateForm()){
+            $.ajax({
+                type: "POST",
+                url: "/project",
+                data: form.serialize(),
+                success: function (response){
+                    alert("Project added successfully");
+                    window.location.href="/project";
+                },
+                error: function (error){
+                    alert("Something went wrong");
+                }
+            });
+        }
+    });
+</script>
 
 <!--    for select drop-drown-->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.14/dist/js/bootstrap-select.min.js"></script>
