--- a/src/main/resources/templates/issue.html
+++ b/src/main/resources/templates/issue.html
@@ -788,10 +788,10 @@
                 };
             });
         }
+
     }
 
-
-    const issue = [{
+    const issue1 = [{
         id: 1,
         title: "title",
         uploader: { id: 1, name: "thant" },
@@ -810,6 +810,47 @@
         impact: "bla",
         place: "bla"
     }];
+
+    const issue2 = [{
+        id: 1,
+        title: "title",
+        uploader: { id: 1, name: "thant" },
+        status: true, // complete or not
+        createdDate: 1702000000000,
+        modified: 0,
+        category: ["error", "bug"],
+        description: `<div class="code-block">
+                                <p>"this code does not work"</p>
+                                <pre class="ql-syntax" spellcheck="false">aercawercawecrawe{}@#!@#!@</pre>
+                            </div>`,
+        corractive: "bla",
+        preventive: "bla",
+        direct: "bla",
+        root: "bla",
+        impact: "bla",
+        place: "bla"
+    }];
+    const issue3 = [{
+        id: 1,
+        title: "title",
+        uploader: { id: 1, name: "thant" },
+        status: true, // complete or not
+        createdDate: 1702000000000,
+        modified: 0,
+        category: ["error", "bug"],
+        description: `<div class="code-block">
+                                <p>"this code does not work"</p>
+                                <pre class="ql-syntax" spellcheck="false">aercawercawecrawe{}@#!@#!@</pre>
+                            </div>`,
+        corractive: "bla",
+        preventive: "bla",
+        direct: "bla",
+        root: "bla",
+        impact: "bla",
+        place: "bla"
+    }];
+
+    const issueArray = [issue1, issue2, issue3];
 
 
 
